<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rodri.myappportfolio.MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:id="@+id/btnMovies"
            android:background="@android:color/background_light"
            android:textColor="@android:color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="100dp"
            android:onClick="viewMovies"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk"
            android:id="@+id/btnStock"
            android:background="@android:color/background_light"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="viewStock"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_it_bigger"
            android:id="@+id/btnBigger"
            android:background="@android:color/background_light"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="viewBigger"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_your_app_material"
            android:id="@+id/btnMaterial"
            android:background="@android:color/background_light"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="viewMaterial"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous"
            android:id="@+id/btnGo"
            android:background="@android:color/background_light"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="viewGo"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/btnCaps"
            android:background="@android:color/background_light"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="viewCapstone"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:id="@+id/txtViewNano"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textStyle="bold"
        android:textColor="@android:color/primary_text_dark" />

</RelativeLayout>
